--- a/index.html
+++ b/index.html
@@ -1,80 +1,63 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head><link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LongHorn BBQ</title>
-    <script src="https://kit.fontawesome.com/381473f2f6.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <!-- <div class="logo">
-        <img src="images/logo.png" alt="">
-    </div> -->
-    <header class="navbar">
-        
-        <a href="#" class="logo"><img src="../BBQ Exam 2/Images/examlogo.svg"></a>
-        <a href="#">Register</a>
-        <a href="#">Covid</a>
-        <a href="#">About us</a>
-    </header>
-    <div class="titles">
-        <h1 class="first">LONGHORN BBQ</h1>
-        <h1 class="second">COMPETE AND</h1>
-        <h1 class="third">COOKING IS</h1>
-    </div>
-    <div class="titles2">
-        <h1 class="godina">2023</h1>
-        <h1 class="win">WIN</h1>
-        <h1 class="love">LOVE</h1>
-    </div>
-    <div class="buttons">
-        <button class="register"><a href="registration.html">Register</a></button>
-        <button class="terms"><a href="#">Terms and conditions</a></button>
-        <button class="sauce"><a href="#">Sauce recipe</a></button>
-    </div>
-    <div class="section2">
-        <!-- <div class="hero">
-            <img src="images/secondhero.jpg" alt="">
-        </div> -->
-        <div class="text">
-            <h1>WHO ARE WE?</h1>
-            <p>All of this started in 1996, travelling around the 
-            world for 7 years <br> and then we started organizing events. Our 
-            idea is to spread American barbecue culture around 
-            Europe and to <br> get people  into forming their own 
-            teams. We want to help the growth of barbecue 
-            competitions and make the sport more popular!</p>
-        </div>
-    </div>
-    <div class="covid">
-        <div class="covidinfo">
-            <!-- <img src="images/Covid.png" alt="" class="covidbanner"> -->
-            <h1 class="header1">COVID 2023</h1>
-            <h1 class="header2">IF COVID comes back</h1>
-            <ul>
-                <li>Guests and participants must wear masks!</li>
-                <li>Social distancing rule must be followed!</li>
-            </ul>
-            <!-- <p>If COVID 19 comes back in 2023 we must follow <br>
-                these simple rules so we can enjoy the planned <br>
-                event and get to taste great barbecue!
-            </p> -->
-        </div>
-        <div class="hero"><img src="images/background3.jpg" alt="" class="pic"></div>
-    </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Longhorn BBQ</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
     
-    </div>
-    <footer>
-        <div class="socialmedia">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href=""></a>
-        <div class="ft">
-            <h1>DESIGNED BY VSHL</h1>
+  </head>
+  <body>
+    <nav class="navbar bg-body-primary" style="background-color: #b15333;">
+      <div class="container d-flex align-items-center">
+        <a class="navbar-brand" href="index.html">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <img src="Images\grill logo not final.svg" class="img-fluid" alt="Logo" width="200">
+              </div>
+              <div class="col-9 mt-4 text-white">
+                <h1 style="font-size: 6vw";>LONGHORN BBQ</h1>
+              </div>
+            </div>
+        </a>
+      </div>
+    </nav>
+
+    <div id="carouselAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Images\background attempt.jpg" class="d-block w-100">
         </div>
-    </footer>
-</body>
+        <div class="carousel-item">
+          <img src="Images\background3.jpg" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+          <img src="Images\backgroundattempt2.jpg" class="d-block w-100">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="container-fluid text-center">
+      <div class="row align-items-center">
+        <div class="col">
+          ABOUT US
+        </div>
+        <div class="col">
+          REGISTER
+        </div>
+      </div>
+      </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </html>
