--- a/registration.html
+++ b/registration.html
@@ -1,21 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head><link rel="stylesheet" href="registration.css">
-    <link rel="stylesheet" href="">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LongHorn BBQ</title>
-    <script src="https://kit.fontawesome.com/381473f2f6.js" crossorigin="anonymous"></script>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Longhorn BBQ</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
+  </head>
 <body>
-
-    <header class="navbar">
-        <a href="index.html">Home</a>
-        <a href="#">Register</a>
-        <a href="#">Covid</a>
-        <a href="#">About us</a>
-    </header>
+        <nav class="navbar bg-body-primary" style="background-color: #b15333;">
+          <div class="container d-flex align-items-center">
+            <a class="navbar-brand" href="index.html">
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <img src="Images\grill logo not final.svg" class="img-fluid" alt="Logo" width="200">
+                  </div>
+                  <div class="col-9 mt-4 text-white">
+                    <h1 style="font-size: 6vw";>LONGHORN BBQ</h1>
+                  </div>
+                </div>
+            </a>
+          </div>
+        </nav>
     <div class="info">
         <div class="reginfo1">
             <h1>Entry fees:</h1>
