Front page completed
Logo finalized.

The front and main page's design has been finalized, and now all there's left is to rebuild the registration form based off of the new design

--- a/registration.html
+++ b/registration.html
@@ -9,21 +9,21 @@
     <link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
   </head>
 <body>
-        <nav class="navbar bg-body-primary" style="background-color: #b15333;">
-          <div class="container d-flex align-items-center">
-            <a class="navbar-brand" href="index.html">
-              <div class="container">
-                <div class="row">
-                  <div class="col">
-                    <img src="Images\grill logo not final.svg" class="img-fluid" alt="Logo" width="200">
-                  </div>
-                  <div class="col-9 mt-4 text-white">
-                    <h1 style="font-size: 6vw";>LONGHORN BBQ</h1>
-                  </div>
+    <nav class="navbar bg-body-primary" style="background-color: #b15333;">
+        <div class="container d-flex align-items-center">
+          <a class="navbar-brand" href="index.html">
+            <div class="container">
+              <div class="row">
+                <div class="col">
+                  <img src="Images\grill logo.svg" class="img-fluid" alt="Logo" width="auto">
                 </div>
-            </a>
-          </div>
-        </nav>
+                <div class="col-9 mt-4 text-white">
+                  <h1 style="font-size: 8vw";>LONGHORN BBQ</h1>
+                </div>
+              </div>
+          </a>
+        </div>
+      </nav>
     <div class="info">
         <div class="reginfo1">
             <h1>Entry fees:</h1>
