--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Longhorn BBQ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/85ef539d63.js" crossorigin="anonymous"></script>
+     </head>
   <body>
     <nav class="navbar bg-body-primary" style="background-color: #b15333;">
       <div class="container d-flex align-items-center">
@@ -15,10 +18,10 @@
           <div class="container">
             <div class="row">
               <div class="col">
-                <img src="Images\grill logo not final.svg" class="img-fluid" alt="Logo" width="200">
+                <img src="Images\grill logo.svg" class="img-fluid" alt="Logo" width="auto">
               </div>
               <div class="col-9 mt-4 text-white">
-                <h1 style="font-size: 6vw";>LONGHORN BBQ</h1>
+                <h1 style="font-size: 8vw";>LONGHORN BBQ</h1>
               </div>
             </div>
         </a>
@@ -67,8 +70,10 @@
       
         
 <h2>FOR THE LOVE OF COOKING</h2>
-<p>Consectetur adipiscing elit. Mauris molestie elit diam, at tincidunt mauris dapibus et. Sed elementum elit sit amet metus consequat fermentum. Vestibulum efficitur magna sit amet posuere laoreet. Suspendisse sagittis placerat laoreet. Curabitur et erat sit amet tellus sagittis lacinia. Pellentesque eget nisi ut nisi porta sagittis a at ante. Nulla orci sem, convallis eget vehicula non, fringilla at eros. Vestibulum sed felis diam. Vivamus tincidunt dui tempor, tincidunt nisi vel, egestas lectus. In in diam pulvinar, iaculis neque vitae, mattis turpis. Suspendisse tristique, felis a pulvinar hendrerit, enim est lobortis dui, at efficitur nunc mauris id mauris.</p>
+<p>Consectetur adipiscing elit. Mauris molestie elit diam, at tincidunt mauris dapibus et. <b>Sed elementum elit sit amet metus</b> consequat fermentum. Vestibulum efficitur magna sit amet posuere laoreet. Suspendisse sagittis placerat laoreet. Curabitur et erat sit amet tellus sagittis lacinia. Pellentesque eget nisi ut nisi porta sagittis a at ante. Nulla orci sem, convallis eget vehicula non, fringilla at eros. Vestibulum sed felis diam. Vivamus tincidunt dui tempor, tincidunt nisi vel, egestas lectus. In in diam pulvinar, iaculis neque vitae, mattis turpis. Suspendisse tristique, felis a pulvinar hendrerit, enim est lobortis dui, at efficitur nunc mauris id mauris.</p>
 
+'
+<h2>SMOKED TO PERFECTION</h2>
 <p>Aliquam euismod risus ac dignissim ultricies. Nulla feugiat ut nulla id varius. Quisque egestas, tellus sed pretium tempus, arcu nibh porta tellus, non efficitur arcu risus sed ligula. Suspendisse venenatis nisi dui, et vehicula nisl tempus at. Curabitur volutpat, tortor ut fermentum finibus, quam nisi sodales neque, et hendrerit erat risus at tellus. Praesent eu dictum sem. In et velit sed mi euismod congue. Proin quis elit id diam posuere mattis. Aenean lorem eros, fermentum nec ante sodales, vestibulum interdum nulla. Nulla facilisi. Mauris id condimentum orci. Vivamus viverra dolor sem, non congue nulla imperdiet eu. Vestibulum tempus risus nulla, ut mattis est tempus a. Integer turpis magna, pretium vitae laoreet aliquam, pulvinar ut lacus. Donec congue porta lorem, vel facilisis erat sollicitudin eu.
 
 </p>
@@ -76,6 +81,25 @@
     </div>
 
     </div>
+
+    <div class="divider" style="height: 20px;"></div>
+    <div class="bottom-row text-center">
+    <div class="row align-items-center mx-3 mt-3">
+      <div class="col">
+        <p><i class="fa-brands fa-facebook fa-2x"></i>
+          <i class="fa-brands fa-square-instagram fa-2x"></i>
+          <i class="fa-solid fa-envelope fa-2x"></i>
+          <i class="fa-solid fa-phone fa-2x"></i></p>
+      </div>
+      <div class="col">
+        <p></p>
+      </div>
+      <div class="col">
+        <p><b>[newsletter / other link]</b></p>
+      </div>
+    </div>
+  </div>
+  <div class="divider" style="height: 20px;"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
