Added video element

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 
       <div class="chatterbox">
       <div class="clearfix">
-        <img src="https://i.picsum.photos/id/237/536/354.jpg?hmac=i0yVXW1ORpyCZpQ-CknuyV-jbtU7_x9EBQVhvT5aRr0" class="col-md-6 float-md-end mb-3 ms-md-3" style="height: 370px; width: 500px;">
-      
+                <video class="col-md-6 float-md-end mb-3 ms-md-3" autoplay loop muted>
+          <source src="img2\bbq-promo-vid.mp4" type="video/mp4" />
+        </video>
         
 <h2>FOR THE LOVE OF COOKING</h2>
 <p>Consectetur adipiscing elit. Mauris molestie elit diam, at tincidunt mauris dapibus et. <b>Sed elementum elit sit amet metus</b> consequat fermentum. Vestibulum efficitur magna sit amet posuere laoreet. Suspendisse sagittis placerat laoreet. Curabitur et erat sit amet tellus sagittis lacinia. Pellentesque eget nisi ut nisi porta sagittis a at ante. Nulla orci sem, convallis eget vehicula non, fringilla at eros. Vestibulum sed felis diam. Vivamus tincidunt dui tempor, tincidunt nisi vel, egestas lectus. In in diam pulvinar, iaculis neque vitae, mattis turpis. Suspendisse tristique, felis a pulvinar hendrerit, enim est lobortis dui, at efficitur nunc mauris id mauris.</p>
