--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
           <a href="registration.html" class="btn btn-bd-info"><h2>REGISTER</h2></a>
         </div>
         <div class="d-grid gap-2 col-4 mx-auto">
-          <a href="#" class="btn btn-bd-info"><h2>ABOUT US</h2></a>
+          <a href="#aboutus" class="btn btn-bd-info"><h2>ABOUT US</h2></a>
         </div>
       </div>
       </div>
       <div class="divider" style="height: 20px;"></div>
-
-      <div class="chatterbox">
+      <div class="chatterbox" id="aboutus">
       <div class="clearfix">
                 <video class="col-md-6 float-md-end mb-3 ms-md-3" autoplay loop muted>
           <source src="img2\bbq-promo-vid.mp4" type="video/mp4" />
@@ -83,7 +82,9 @@
 
     </div>
 
-    <div class="divider" style="height: 20px;"></div>
+<footer>
+
+  <div class="divider" style="height: 20px;"></div>
     <div class="bottom-row text-center">
     <div class="row align-items-center mx-3 mt-3">
       <div class="col">
@@ -101,6 +102,9 @@
     </div>
   </div>
   <div class="divider" style="height: 20px;"></div>
+
+</footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
